# awesome-rust-api

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: api.rs
src/repository/: database.rs
src/test/: todos.http
