[package]
name = "api-with-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4.31", features = ["serde"] }
mongodb = "2.8.0"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
